--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-css-practice",
+  "name": "mysql-practice-simple-crud",
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
